<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_title">
        <item android:id="@+id/menu_item_home"
            android:title="@string/menu_item_home_title"
            android:icon="@drawable/ic_home"
            app:iconTint="@color/colorPrimary"
            android:orderInCategory="3"
            app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/menu_settings">
        <item android:id="@+id/menu_item_settings"
            android:title="@string/menu_item_settings_title"
            android:icon="@drawable/ic_settings"
            app:iconTint="@color/colorPrimary"
            android:orderInCategory="4"
            app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/menu_data_protection">
        <item android:id="@+id/menu_item_data_protection"
            android:title="@string/menu_item_data_policy_title"
            android:icon="@drawable/ic_data_protection"
            app:iconTint="@color/colorPrimary"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/menu_imprint">
        <item android:id="@+id/menu_item_imprint"
            android:title="@string/menu_item_imprint_title"
            android:icon="@drawable/ic_imprint"
            app:iconTint="@color/colorPrimary"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/menu_help">
        <item android:id="@+id/menu_item_help"
            android:title="@string/menu_item_help_title"
            android:icon="@drawable/ic_help"
            app:iconTint="@color/colorPrimary"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>