<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="prize"
            type="mindbit.de.rubbellosapp.persistence.model.Prize" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dialog_error_message_horizontal_padding"
        android:paddingTop="@dimen/dialog_error_message_vertical_padding"
        android:paddingRight="@dimen/dialog_error_message_horizontal_padding"
        android:paddingBottom="@dimen/dialog_error_message_vertical_padding">

        <TextView
            android:id="@+id/tv_prize_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_edit_prize_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialog_title" />

        <android.support.design.widget.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_prize_name"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:hint="@string/txt_description"
                android:gravity="center"
                android:inputType = "text"
                android:text="@={prize.description}"/>
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/et_prize_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center"
            android:hint="@string/txt_description"
            android:inputType="text"
            android:text="@={prize.description}" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_prize_amount"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:hint="@string/txt_amount"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="@={prize.amount}"/>
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/et_prize_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center"
            android:hint="@string/txt_amount"
            android:inputType="numberSigned"
            android:text="@={prize.amount}" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_prize_odds"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:hint="@string/txt_odds"
                android:gravity="center"
                android:inputType="numberSigned"
                android:text="@={prize.odds}"/>
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/et_prize_odds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center"
            android:hint="@string/txt_odds"
            android:inputType="numberSigned"
            android:text="@={prize.odds}" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_prize_validity"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:hint="@string/txt_validity"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@={prize.validity}"/>
        </android.support.design.widget.TextInputLayout>

        <!--<EditText
            android:id="@+id/et_prize_validity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_edit_prize_edit_text_margin"
            android:gravity="center"
            android:hint="@string/txt_validity"
            android:inputType="textMultiLine"
            android:text="@={prize.validity}" />-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dialog_edit_prize_button_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dialog_edit_prize_margin_between_buttons"
                android:background="@color/colorFawn"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dialog_edit_prize_button_width"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@color/colorFawn"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</layout>